# PurgeQ

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  BUILD_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  PRIVACY.md  QUICKSTART.md  README.md  SECURITY.md  TERMS.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.claude/: settings.local.json
.github/workflows/: ci-cd.yml  release.yml
api/: __init__.py
api/app/: main.py
api/auth/: discord.py
api/core/: __init__.py  cache.py  config.py  database.py  exceptions.py  rate_limit.py  security.py
api/models/: __init__.py
api/routers/: __init__.py  auth.py
api/schemas/: __init__.py
api/services/: __init__.py
auth-page/: README.md  wrangler.jsonc
docker/: Dockerfile.api  entrypoint.sh  start.sh
extension/: .env.production  .env.production.example  .eslintrc  REVIEWER_NOTES.md  build.config.ts  manifest.firefox.json  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/scripts/: resize-icons.ps1  svg-to-icons.js  zip-dist.js  zip-source.js
landing/: README.md  i18n.js  index.html  landing.css  mockup-components.jsx  shared.css  strings.js  wrangler.jsonc
landing/auth/: README.md  index.html
landing/privacy/: index.html
landing/terms/: index.html
landing/upgrade/: index.html
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 001_initial_schema.py  002_multi_tenant.py
supabase/: README.md
supabase/migrations/: 20260517000000_init_schema.sql  20260517000100_rls_policies.sql  20260517000200_triggers_and_rpc.sql  20260517000300_lint_fixes.sql  20260517000400_perf_indexes_and_policy_consolidation.sql  20260517000500_fix_display_name_precedence.sql  (+12 more)
tests/: __init__.py  conftest.py  test_api.py  test_import.py  test_schemas.py  test_service.py
(+12 files in other folders)
